src/assembler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> line
Rule 2     program -> program line
Rule 3     line -> LABEL COLON NEWLINE
Rule 4     line -> VAR COLON FLOAT NEWLINE
Rule 5     line -> VAR COLON NUMBER NEWLINE
Rule 6     line -> SECTION
Rule 7     line -> SECTION REFERENCE
Rule 8     line -> SECTION VAR
Rule 9     line -> SECTION LABEL
Rule 10    line -> instruction NEWLINE
Rule 11    line -> instruction
Rule 12    line -> NEWLINE
Rule 13    instruction -> MNEMONIC REGISTER COMMA REGISTER
Rule 14    instruction -> MNEMONIC REGISTER COMMA NUMBER
Rule 15    instruction -> MNEMONIC REGISTER COMMA MEMORY
Rule 16    instruction -> MNEMONIC REGISTER COMMA LBRACKET VAR RBRACKET
Rule 17    instruction -> MNEMONIC REGISTER COMMA LBRACKET REGISTER RBRACKET
Rule 18    instruction -> MNEMONIC MEMORY COMMA REGISTER
Rule 19    instruction -> MNEMONIC LBRACKET VAR RBRACKET COMMA REGISTER
Rule 20    instruction -> MNEMONIC MEMORY COMMA NUMBER
Rule 21    instruction -> MNEMONIC LBRACKET VAR RBRACKET COMMA NUMBER
Rule 22    instruction -> MNEMONIC LBRACKET REGISTER RBRACKET COMMA REGISTER
Rule 23    instruction -> MNEMONIC MEMORY
Rule 24    instruction -> MNEMONIC REGISTER
Rule 25    instruction -> MNEMONIC NUMBER
Rule 26    instruction -> MNEMONIC LABEL
Rule 27    instruction -> MNEMONIC VAR
Rule 28    instruction -> MNEMONIC

Terminals, with rules where they appear

COLON                : 3 4 5
COMMA                : 13 14 15 16 17 18 19 20 21 22
FLOAT                : 4
LABEL                : 3 9 26
LBRACKET             : 16 17 19 21 22
MEMORY               : 15 18 20 23
MNEMONIC             : 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
NEWLINE              : 3 4 5 10 12
NUMBER               : 5 14 20 21 25
RBRACKET             : 16 17 19 21 22
REFERENCE            : 7
REGISTER             : 13 13 14 15 16 17 17 18 19 22 22 24
SECTION              : 6 7 8 9
VAR                  : 4 5 8 16 19 21 27
error                : 

Nonterminals, with rules where they appear

instruction          : 10 11
line                 : 1 2
program              : 2 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . line
    (2) program -> . program line
    (3) line -> . LABEL COLON NEWLINE
    (4) line -> . VAR COLON FLOAT NEWLINE
    (5) line -> . VAR COLON NUMBER NEWLINE
    (6) line -> . SECTION
    (7) line -> . SECTION REFERENCE
    (8) line -> . SECTION VAR
    (9) line -> . SECTION LABEL
    (10) line -> . instruction NEWLINE
    (11) line -> . instruction
    (12) line -> . NEWLINE
    (13) instruction -> . MNEMONIC REGISTER COMMA REGISTER
    (14) instruction -> . MNEMONIC REGISTER COMMA NUMBER
    (15) instruction -> . MNEMONIC REGISTER COMMA MEMORY
    (16) instruction -> . MNEMONIC REGISTER COMMA LBRACKET VAR RBRACKET
    (17) instruction -> . MNEMONIC REGISTER COMMA LBRACKET REGISTER RBRACKET
    (18) instruction -> . MNEMONIC MEMORY COMMA REGISTER
    (19) instruction -> . MNEMONIC LBRACKET VAR RBRACKET COMMA REGISTER
    (20) instruction -> . MNEMONIC MEMORY COMMA NUMBER
    (21) instruction -> . MNEMONIC LBRACKET VAR RBRACKET COMMA NUMBER
    (22) instruction -> . MNEMONIC LBRACKET REGISTER RBRACKET COMMA REGISTER
    (23) instruction -> . MNEMONIC MEMORY
    (24) instruction -> . MNEMONIC REGISTER
    (25) instruction -> . MNEMONIC NUMBER
    (26) instruction -> . MNEMONIC LABEL
    (27) instruction -> . MNEMONIC VAR
    (28) instruction -> . MNEMONIC

    LABEL           shift and go to state 3
    VAR             shift and go to state 5
    SECTION         shift and go to state 6
    NEWLINE         shift and go to state 4
    MNEMONIC        shift and go to state 8

    program                        shift and go to state 1
    line                           shift and go to state 2
    instruction                    shift and go to state 7

state 1

    (0) S' -> program .
    (2) program -> program . line
    (3) line -> . LABEL COLON NEWLINE
    (4) line -> . VAR COLON FLOAT NEWLINE
    (5) line -> . VAR COLON NUMBER NEWLINE
    (6) line -> . SECTION
    (7) line -> . SECTION REFERENCE
    (8) line -> . SECTION VAR
    (9) line -> . SECTION LABEL
    (10) line -> . instruction NEWLINE
    (11) line -> . instruction
    (12) line -> . NEWLINE
    (13) instruction -> . MNEMONIC REGISTER COMMA REGISTER
    (14) instruction -> . MNEMONIC REGISTER COMMA NUMBER
    (15) instruction -> . MNEMONIC REGISTER COMMA MEMORY
    (16) instruction -> . MNEMONIC REGISTER COMMA LBRACKET VAR RBRACKET
    (17) instruction -> . MNEMONIC REGISTER COMMA LBRACKET REGISTER RBRACKET
    (18) instruction -> . MNEMONIC MEMORY COMMA REGISTER
    (19) instruction -> . MNEMONIC LBRACKET VAR RBRACKET COMMA REGISTER
    (20) instruction -> . MNEMONIC MEMORY COMMA NUMBER
    (21) instruction -> . MNEMONIC LBRACKET VAR RBRACKET COMMA NUMBER
    (22) instruction -> . MNEMONIC LBRACKET REGISTER RBRACKET COMMA REGISTER
    (23) instruction -> . MNEMONIC MEMORY
    (24) instruction -> . MNEMONIC REGISTER
    (25) instruction -> . MNEMONIC NUMBER
    (26) instruction -> . MNEMONIC LABEL
    (27) instruction -> . MNEMONIC VAR
    (28) instruction -> . MNEMONIC

    LABEL           shift and go to state 3
    VAR             shift and go to state 5
    SECTION         shift and go to state 6
    NEWLINE         shift and go to state 4
    MNEMONIC        shift and go to state 8

    line                           shift and go to state 9
    instruction                    shift and go to state 7

state 2

    (1) program -> line .

    LABEL           reduce using rule 1 (program -> line .)
    VAR             reduce using rule 1 (program -> line .)
    SECTION         reduce using rule 1 (program -> line .)
    NEWLINE         reduce using rule 1 (program -> line .)
    MNEMONIC        reduce using rule 1 (program -> line .)
    $end            reduce using rule 1 (program -> line .)


state 3

    (3) line -> LABEL . COLON NEWLINE

    COLON           shift and go to state 10


state 4

    (12) line -> NEWLINE .

    LABEL           reduce using rule 12 (line -> NEWLINE .)
    VAR             reduce using rule 12 (line -> NEWLINE .)
    SECTION         reduce using rule 12 (line -> NEWLINE .)
    NEWLINE         reduce using rule 12 (line -> NEWLINE .)
    MNEMONIC        reduce using rule 12 (line -> NEWLINE .)
    $end            reduce using rule 12 (line -> NEWLINE .)


state 5

    (4) line -> VAR . COLON FLOAT NEWLINE
    (5) line -> VAR . COLON NUMBER NEWLINE

    COLON           shift and go to state 11


state 6

    (6) line -> SECTION .
    (7) line -> SECTION . REFERENCE
    (8) line -> SECTION . VAR
    (9) line -> SECTION . LABEL

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for LABEL resolved as shift
    SECTION         reduce using rule 6 (line -> SECTION .)
    NEWLINE         reduce using rule 6 (line -> SECTION .)
    MNEMONIC        reduce using rule 6 (line -> SECTION .)
    $end            reduce using rule 6 (line -> SECTION .)
    REFERENCE       shift and go to state 12
    VAR             shift and go to state 13
    LABEL           shift and go to state 14

  ! LABEL           [ reduce using rule 6 (line -> SECTION .) ]
  ! VAR             [ reduce using rule 6 (line -> SECTION .) ]


state 7

    (10) line -> instruction . NEWLINE
    (11) line -> instruction .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 15
    LABEL           reduce using rule 11 (line -> instruction .)
    VAR             reduce using rule 11 (line -> instruction .)
    SECTION         reduce using rule 11 (line -> instruction .)
    MNEMONIC        reduce using rule 11 (line -> instruction .)
    $end            reduce using rule 11 (line -> instruction .)

  ! NEWLINE         [ reduce using rule 11 (line -> instruction .) ]


state 8

    (13) instruction -> MNEMONIC . REGISTER COMMA REGISTER
    (14) instruction -> MNEMONIC . REGISTER COMMA NUMBER
    (15) instruction -> MNEMONIC . REGISTER COMMA MEMORY
    (16) instruction -> MNEMONIC . REGISTER COMMA LBRACKET VAR RBRACKET
    (17) instruction -> MNEMONIC . REGISTER COMMA LBRACKET REGISTER RBRACKET
    (18) instruction -> MNEMONIC . MEMORY COMMA REGISTER
    (19) instruction -> MNEMONIC . LBRACKET VAR RBRACKET COMMA REGISTER
    (20) instruction -> MNEMONIC . MEMORY COMMA NUMBER
    (21) instruction -> MNEMONIC . LBRACKET VAR RBRACKET COMMA NUMBER
    (22) instruction -> MNEMONIC . LBRACKET REGISTER RBRACKET COMMA REGISTER
    (23) instruction -> MNEMONIC . MEMORY
    (24) instruction -> MNEMONIC . REGISTER
    (25) instruction -> MNEMONIC . NUMBER
    (26) instruction -> MNEMONIC . LABEL
    (27) instruction -> MNEMONIC . VAR
    (28) instruction -> MNEMONIC .

  ! shift/reduce conflict for LABEL resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
    REGISTER        shift and go to state 16
    MEMORY          shift and go to state 18
    LBRACKET        shift and go to state 19
    NUMBER          shift and go to state 17
    LABEL           shift and go to state 21
    VAR             shift and go to state 20
    NEWLINE         reduce using rule 28 (instruction -> MNEMONIC .)
    SECTION         reduce using rule 28 (instruction -> MNEMONIC .)
    MNEMONIC        reduce using rule 28 (instruction -> MNEMONIC .)
    $end            reduce using rule 28 (instruction -> MNEMONIC .)

  ! LABEL           [ reduce using rule 28 (instruction -> MNEMONIC .) ]
  ! VAR             [ reduce using rule 28 (instruction -> MNEMONIC .) ]


state 9

    (2) program -> program line .

    LABEL           reduce using rule 2 (program -> program line .)
    VAR             reduce using rule 2 (program -> program line .)
    SECTION         reduce using rule 2 (program -> program line .)
    NEWLINE         reduce using rule 2 (program -> program line .)
    MNEMONIC        reduce using rule 2 (program -> program line .)
    $end            reduce using rule 2 (program -> program line .)


state 10

    (3) line -> LABEL COLON . NEWLINE

    NEWLINE         shift and go to state 22


state 11

    (4) line -> VAR COLON . FLOAT NEWLINE
    (5) line -> VAR COLON . NUMBER NEWLINE

    FLOAT           shift and go to state 23
    NUMBER          shift and go to state 24


state 12

    (7) line -> SECTION REFERENCE .

    LABEL           reduce using rule 7 (line -> SECTION REFERENCE .)
    VAR             reduce using rule 7 (line -> SECTION REFERENCE .)
    SECTION         reduce using rule 7 (line -> SECTION REFERENCE .)
    NEWLINE         reduce using rule 7 (line -> SECTION REFERENCE .)
    MNEMONIC        reduce using rule 7 (line -> SECTION REFERENCE .)
    $end            reduce using rule 7 (line -> SECTION REFERENCE .)


state 13

    (8) line -> SECTION VAR .

    LABEL           reduce using rule 8 (line -> SECTION VAR .)
    VAR             reduce using rule 8 (line -> SECTION VAR .)
    SECTION         reduce using rule 8 (line -> SECTION VAR .)
    NEWLINE         reduce using rule 8 (line -> SECTION VAR .)
    MNEMONIC        reduce using rule 8 (line -> SECTION VAR .)
    $end            reduce using rule 8 (line -> SECTION VAR .)


state 14

    (9) line -> SECTION LABEL .

    LABEL           reduce using rule 9 (line -> SECTION LABEL .)
    VAR             reduce using rule 9 (line -> SECTION LABEL .)
    SECTION         reduce using rule 9 (line -> SECTION LABEL .)
    NEWLINE         reduce using rule 9 (line -> SECTION LABEL .)
    MNEMONIC        reduce using rule 9 (line -> SECTION LABEL .)
    $end            reduce using rule 9 (line -> SECTION LABEL .)


state 15

    (10) line -> instruction NEWLINE .

    LABEL           reduce using rule 10 (line -> instruction NEWLINE .)
    VAR             reduce using rule 10 (line -> instruction NEWLINE .)
    SECTION         reduce using rule 10 (line -> instruction NEWLINE .)
    NEWLINE         reduce using rule 10 (line -> instruction NEWLINE .)
    MNEMONIC        reduce using rule 10 (line -> instruction NEWLINE .)
    $end            reduce using rule 10 (line -> instruction NEWLINE .)


state 16

    (13) instruction -> MNEMONIC REGISTER . COMMA REGISTER
    (14) instruction -> MNEMONIC REGISTER . COMMA NUMBER
    (15) instruction -> MNEMONIC REGISTER . COMMA MEMORY
    (16) instruction -> MNEMONIC REGISTER . COMMA LBRACKET VAR RBRACKET
    (17) instruction -> MNEMONIC REGISTER . COMMA LBRACKET REGISTER RBRACKET
    (24) instruction -> MNEMONIC REGISTER .

    COMMA           shift and go to state 25
    NEWLINE         reduce using rule 24 (instruction -> MNEMONIC REGISTER .)
    LABEL           reduce using rule 24 (instruction -> MNEMONIC REGISTER .)
    VAR             reduce using rule 24 (instruction -> MNEMONIC REGISTER .)
    SECTION         reduce using rule 24 (instruction -> MNEMONIC REGISTER .)
    MNEMONIC        reduce using rule 24 (instruction -> MNEMONIC REGISTER .)
    $end            reduce using rule 24 (instruction -> MNEMONIC REGISTER .)


state 17

    (25) instruction -> MNEMONIC NUMBER .

    NEWLINE         reduce using rule 25 (instruction -> MNEMONIC NUMBER .)
    LABEL           reduce using rule 25 (instruction -> MNEMONIC NUMBER .)
    VAR             reduce using rule 25 (instruction -> MNEMONIC NUMBER .)
    SECTION         reduce using rule 25 (instruction -> MNEMONIC NUMBER .)
    MNEMONIC        reduce using rule 25 (instruction -> MNEMONIC NUMBER .)
    $end            reduce using rule 25 (instruction -> MNEMONIC NUMBER .)


state 18

    (18) instruction -> MNEMONIC MEMORY . COMMA REGISTER
    (20) instruction -> MNEMONIC MEMORY . COMMA NUMBER
    (23) instruction -> MNEMONIC MEMORY .

    COMMA           shift and go to state 26
    NEWLINE         reduce using rule 23 (instruction -> MNEMONIC MEMORY .)
    LABEL           reduce using rule 23 (instruction -> MNEMONIC MEMORY .)
    VAR             reduce using rule 23 (instruction -> MNEMONIC MEMORY .)
    SECTION         reduce using rule 23 (instruction -> MNEMONIC MEMORY .)
    MNEMONIC        reduce using rule 23 (instruction -> MNEMONIC MEMORY .)
    $end            reduce using rule 23 (instruction -> MNEMONIC MEMORY .)


state 19

    (19) instruction -> MNEMONIC LBRACKET . VAR RBRACKET COMMA REGISTER
    (21) instruction -> MNEMONIC LBRACKET . VAR RBRACKET COMMA NUMBER
    (22) instruction -> MNEMONIC LBRACKET . REGISTER RBRACKET COMMA REGISTER

    VAR             shift and go to state 27
    REGISTER        shift and go to state 28


state 20

    (27) instruction -> MNEMONIC VAR .

    NEWLINE         reduce using rule 27 (instruction -> MNEMONIC VAR .)
    LABEL           reduce using rule 27 (instruction -> MNEMONIC VAR .)
    VAR             reduce using rule 27 (instruction -> MNEMONIC VAR .)
    SECTION         reduce using rule 27 (instruction -> MNEMONIC VAR .)
    MNEMONIC        reduce using rule 27 (instruction -> MNEMONIC VAR .)
    $end            reduce using rule 27 (instruction -> MNEMONIC VAR .)


state 21

    (26) instruction -> MNEMONIC LABEL .

    NEWLINE         reduce using rule 26 (instruction -> MNEMONIC LABEL .)
    LABEL           reduce using rule 26 (instruction -> MNEMONIC LABEL .)
    VAR             reduce using rule 26 (instruction -> MNEMONIC LABEL .)
    SECTION         reduce using rule 26 (instruction -> MNEMONIC LABEL .)
    MNEMONIC        reduce using rule 26 (instruction -> MNEMONIC LABEL .)
    $end            reduce using rule 26 (instruction -> MNEMONIC LABEL .)


state 22

    (3) line -> LABEL COLON NEWLINE .

    LABEL           reduce using rule 3 (line -> LABEL COLON NEWLINE .)
    VAR             reduce using rule 3 (line -> LABEL COLON NEWLINE .)
    SECTION         reduce using rule 3 (line -> LABEL COLON NEWLINE .)
    NEWLINE         reduce using rule 3 (line -> LABEL COLON NEWLINE .)
    MNEMONIC        reduce using rule 3 (line -> LABEL COLON NEWLINE .)
    $end            reduce using rule 3 (line -> LABEL COLON NEWLINE .)


state 23

    (4) line -> VAR COLON FLOAT . NEWLINE

    NEWLINE         shift and go to state 29


state 24

    (5) line -> VAR COLON NUMBER . NEWLINE

    NEWLINE         shift and go to state 30


state 25

    (13) instruction -> MNEMONIC REGISTER COMMA . REGISTER
    (14) instruction -> MNEMONIC REGISTER COMMA . NUMBER
    (15) instruction -> MNEMONIC REGISTER COMMA . MEMORY
    (16) instruction -> MNEMONIC REGISTER COMMA . LBRACKET VAR RBRACKET
    (17) instruction -> MNEMONIC REGISTER COMMA . LBRACKET REGISTER RBRACKET

    REGISTER        shift and go to state 31
    NUMBER          shift and go to state 32
    MEMORY          shift and go to state 33
    LBRACKET        shift and go to state 34


state 26

    (18) instruction -> MNEMONIC MEMORY COMMA . REGISTER
    (20) instruction -> MNEMONIC MEMORY COMMA . NUMBER

    REGISTER        shift and go to state 35
    NUMBER          shift and go to state 36


state 27

    (19) instruction -> MNEMONIC LBRACKET VAR . RBRACKET COMMA REGISTER
    (21) instruction -> MNEMONIC LBRACKET VAR . RBRACKET COMMA NUMBER

    RBRACKET        shift and go to state 37


state 28

    (22) instruction -> MNEMONIC LBRACKET REGISTER . RBRACKET COMMA REGISTER

    RBRACKET        shift and go to state 38


state 29

    (4) line -> VAR COLON FLOAT NEWLINE .

    LABEL           reduce using rule 4 (line -> VAR COLON FLOAT NEWLINE .)
    VAR             reduce using rule 4 (line -> VAR COLON FLOAT NEWLINE .)
    SECTION         reduce using rule 4 (line -> VAR COLON FLOAT NEWLINE .)
    NEWLINE         reduce using rule 4 (line -> VAR COLON FLOAT NEWLINE .)
    MNEMONIC        reduce using rule 4 (line -> VAR COLON FLOAT NEWLINE .)
    $end            reduce using rule 4 (line -> VAR COLON FLOAT NEWLINE .)


state 30

    (5) line -> VAR COLON NUMBER NEWLINE .

    LABEL           reduce using rule 5 (line -> VAR COLON NUMBER NEWLINE .)
    VAR             reduce using rule 5 (line -> VAR COLON NUMBER NEWLINE .)
    SECTION         reduce using rule 5 (line -> VAR COLON NUMBER NEWLINE .)
    NEWLINE         reduce using rule 5 (line -> VAR COLON NUMBER NEWLINE .)
    MNEMONIC        reduce using rule 5 (line -> VAR COLON NUMBER NEWLINE .)
    $end            reduce using rule 5 (line -> VAR COLON NUMBER NEWLINE .)


state 31

    (13) instruction -> MNEMONIC REGISTER COMMA REGISTER .

    NEWLINE         reduce using rule 13 (instruction -> MNEMONIC REGISTER COMMA REGISTER .)
    LABEL           reduce using rule 13 (instruction -> MNEMONIC REGISTER COMMA REGISTER .)
    VAR             reduce using rule 13 (instruction -> MNEMONIC REGISTER COMMA REGISTER .)
    SECTION         reduce using rule 13 (instruction -> MNEMONIC REGISTER COMMA REGISTER .)
    MNEMONIC        reduce using rule 13 (instruction -> MNEMONIC REGISTER COMMA REGISTER .)
    $end            reduce using rule 13 (instruction -> MNEMONIC REGISTER COMMA REGISTER .)


state 32

    (14) instruction -> MNEMONIC REGISTER COMMA NUMBER .

    NEWLINE         reduce using rule 14 (instruction -> MNEMONIC REGISTER COMMA NUMBER .)
    LABEL           reduce using rule 14 (instruction -> MNEMONIC REGISTER COMMA NUMBER .)
    VAR             reduce using rule 14 (instruction -> MNEMONIC REGISTER COMMA NUMBER .)
    SECTION         reduce using rule 14 (instruction -> MNEMONIC REGISTER COMMA NUMBER .)
    MNEMONIC        reduce using rule 14 (instruction -> MNEMONIC REGISTER COMMA NUMBER .)
    $end            reduce using rule 14 (instruction -> MNEMONIC REGISTER COMMA NUMBER .)


state 33

    (15) instruction -> MNEMONIC REGISTER COMMA MEMORY .

    NEWLINE         reduce using rule 15 (instruction -> MNEMONIC REGISTER COMMA MEMORY .)
    LABEL           reduce using rule 15 (instruction -> MNEMONIC REGISTER COMMA MEMORY .)
    VAR             reduce using rule 15 (instruction -> MNEMONIC REGISTER COMMA MEMORY .)
    SECTION         reduce using rule 15 (instruction -> MNEMONIC REGISTER COMMA MEMORY .)
    MNEMONIC        reduce using rule 15 (instruction -> MNEMONIC REGISTER COMMA MEMORY .)
    $end            reduce using rule 15 (instruction -> MNEMONIC REGISTER COMMA MEMORY .)


state 34

    (16) instruction -> MNEMONIC REGISTER COMMA LBRACKET . VAR RBRACKET
    (17) instruction -> MNEMONIC REGISTER COMMA LBRACKET . REGISTER RBRACKET

    VAR             shift and go to state 40
    REGISTER        shift and go to state 39


state 35

    (18) instruction -> MNEMONIC MEMORY COMMA REGISTER .

    NEWLINE         reduce using rule 18 (instruction -> MNEMONIC MEMORY COMMA REGISTER .)
    LABEL           reduce using rule 18 (instruction -> MNEMONIC MEMORY COMMA REGISTER .)
    VAR             reduce using rule 18 (instruction -> MNEMONIC MEMORY COMMA REGISTER .)
    SECTION         reduce using rule 18 (instruction -> MNEMONIC MEMORY COMMA REGISTER .)
    MNEMONIC        reduce using rule 18 (instruction -> MNEMONIC MEMORY COMMA REGISTER .)
    $end            reduce using rule 18 (instruction -> MNEMONIC MEMORY COMMA REGISTER .)


state 36

    (20) instruction -> MNEMONIC MEMORY COMMA NUMBER .

    NEWLINE         reduce using rule 20 (instruction -> MNEMONIC MEMORY COMMA NUMBER .)
    LABEL           reduce using rule 20 (instruction -> MNEMONIC MEMORY COMMA NUMBER .)
    VAR             reduce using rule 20 (instruction -> MNEMONIC MEMORY COMMA NUMBER .)
    SECTION         reduce using rule 20 (instruction -> MNEMONIC MEMORY COMMA NUMBER .)
    MNEMONIC        reduce using rule 20 (instruction -> MNEMONIC MEMORY COMMA NUMBER .)
    $end            reduce using rule 20 (instruction -> MNEMONIC MEMORY COMMA NUMBER .)


state 37
